--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
+}
+body {
+    min-width: 325px;
     background-color: #F3EEEA;
 }
 
@@ -15,14 +19,16 @@ body::after {
     left: 0;
     top: 0;
     content: '';
-    width: 100%;
+    width: 100vw;
     height: 100%;
     z-index: 9999;
     opacity: 30%;
     pointer-events: none;
+
 }
 
 body::before {
     background: #393632;
     filter: url(#grainy);
 }
+
