--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2rem;
+    padding: 1rem 2rem;
 
 }
 .logo {
@@ -64,7 +64,7 @@
     background-color: #393632;
 }
 
-@media(max-width: 1200px) {
+@media(max-width: 1024px) {
     .hamburger {
         display: block;
     }
@@ -82,7 +82,7 @@
         position: fixed;
         left: -100%;
         top: 70px;
-        background-color: #262626;
+        background-color: #F3EEEA;
         width: 100%;
         text-align: center;
         transition: 0.3s;
