--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 * {
@@ -20,7 +21,7 @@ body::after {
     top: 0;
     content: '';
     width: 100vw;
-    height: 100%;
+    height: 200%;
     z-index: 9999;
     opacity: 30%;
     pointer-events: none;
